fix(layout): resolve double scrollbar inside sidenav drawer

--- a/projects/design-system/src/app/layout/layout.scss
+++ b/projects/design-system/src/app/layout/layout.scss
@@ -14,7 +14,7 @@
 [sidenav] {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
